cmake_minimum_required(VERSION 3.10)
project(PokerCalculator)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_subdirectory(Poker)
find_package(SDL2 REQUIRED)
include_directories(PokerCalculator ${SDL2_INCLUDE_DIRS})
include_directories(headers Poker/headers)
add_executable(PokerCalculator src/PokerCalculator.cpp src/sdl_postflop.cpp src/sdl_preflop.cpp src/sdl_general.cpp src/main.cpp)
target_link_libraries(PokerCalculator ${SDL2_LIBRARIES} ${SDLTTF_LIBRARY} Pokerlib ${CMAKE_SOURCE_DIR}/libs/libSDL2_ttf.a)